# opengl_test

./: .gitignore  CMakeLists.txt  README.md  build_app.sh  build_magnum.sh  clear_color.cpp  egl_test  egl_test.cpp  find_opengl_libraries.py  library_test.py  moderngl_triangle_egl.py  opengl_test.py  pip_install_glcontext_patched.sh  reinstall_glcontext.sh  run_egl_test.sh  set_env_for_egl.sh
docker/: Dockerfile  README.md  test_script.sh
glcontext_patched/: README.md  setup.py
glcontext_patched/glcontext/: egl.cpp
nvidia-gl/: libEGL.so.1  libEGL_nvidia.so.560.35.05  libEGL_nvidia.so.570.133.07  libGLX.so.0  libGLX_nvidia.so.560.35.05  libGLX_nvidia.so.570.133.07  libnvidia-allocator.so.570.133.07  libnvidia-egl-gbm.so.1.1.1  libnvidia-egl-gbm.so.1.1.2  libnvidia-egl-xcb.so.1  libnvidia-egl-xcb.so.1.0.0  libnvidia-egl-xlib.so.1  libnvidia-egl-xlib.so.1.0.0  libnvidia-glsi.so.560.35.05  libnvidia-glsi.so.570.133.07  libnvidia-tls.so.560.35.05  libnvidia-tls.so.570.133.07  nvidia.json
